# GRA-Unified

./: GRA-Unified.rar  README.md  docker-compose.yml  ecosystem.json  paper-en.tex  paper-ru.tex  pyproject.toml
apps/: __init__.py  main.py
docker/: Dockerfile
docs/: architecture.md  narrative-map.md
gra/: __init__.py  apps.py  biology.py  core.py  hardware.py  multiverse.py  philosophy.py  resonance.py  stability.py  swarm.py
modules/swarm/: __init__.py
scripts/: add_submodules.sh  update_submodules.sh
tests/: __init__.py  test_imports.py
